Fix "Switch to {Profile}..." focusing the wrong window.

BUG=654366

Review-Url: https://codereview.chromium.org/2480393002
Cr-Commit-Position: refs/heads/master@{#430389}

Former-commit-id: 5cc51e0407c4d57ac23c418170481c16f8e27e4f